<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CredentialManager">

    <Button
        android:id="@+id/btnCredentialManagerCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnCreate"
        app:layout_constraintBottom_toTopOf="@+id/btnCredentialManagerUpdate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCredentialManagerCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnCancel"
        app:layout_constraintBottom_toTopOf="@+id/btnCredentialManagerCreate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCredentialManagerUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnUpdate"
        app:layout_constraintBottom_toTopOf="@+id/btnCredentialManagerNew"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCredentialManagerNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnNew"
        app:layout_constraintBottom_toTopOf="@+id/credentialsList"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtCredentialManagerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnCredentialManagerNew"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtCredentialManagerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="User"
        android:ems="10"
        android:hint="@string/txtUser"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtCredentialManagerPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtCredentialManagerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="Name"
        android:ems="10"
        android:hint="@string/txtName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtCredentialManagerUser"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnUserManagerDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUserManagerUpdate" />

    <Button
        android:id="@+id/btnUserManagerUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUserManagerCancel" />

    <Button
        android:id="@+id/btnUserManagerCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignOut" />

    <EditText
        android:id="@+id/txtUserManagerPasswordAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserManagerPassword" />

    <EditText
        android:id="@+id/txtUserManagerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserManagerUser" />

    <EditText
        android:id="@+id/txtUserManagerUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="User"
        android:ems="10"
        android:hint="@string/txtUser"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnManageUser" />

    <Button
        android:id="@+id/btnManageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnManageUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnSignOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/credentialsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="448dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>